udpated grid system for questions

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
                 <h1>Presidential Trivia</h1>
                 <div class='load display:show'>
                     <h3>You will have 3 minutes to answer 11 questions about US Presidents.</h3>
-                    <h3>How will you do?</h3>
+                    <h3>Good Luck!</h3>
                 </div>
             </div>
         </div>
         <div class='row'>
             <div class='col-md-3'>
             </div>
-            <div class='col-md-6 text-center'>
+            <div class='col-md-6 text-center counterDisplay hide'>
                 <h4>You Have:</h4>
                 <h4 class='counter'></h4>
                 <h4>Seconds Remaining</h4>
@@ -82,12 +82,8 @@
         </div>
         <div class='q1 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q1questions questions'></p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -107,14 +103,9 @@
         </div>
         <div class='q2 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q2questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -134,14 +125,9 @@
         </div>
         <div class='q3 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q3questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -161,14 +147,9 @@
         </div>
         <div class='q4 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q4questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -188,14 +169,9 @@
         </div>
         <div class='q5 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q5questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -215,14 +191,9 @@
         </div>
         <div class='q6 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q6questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -242,14 +213,9 @@
         </div>
         <div class='q7 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q7questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -269,14 +235,9 @@
         </div>
         <div class='q8 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q8questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -296,14 +257,9 @@
         </div>
         <div class='q9 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q9questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -323,14 +279,9 @@
         </div>
         <div class='q10 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q10questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
@@ -350,14 +301,9 @@
         </div>
         <div class='q11 hide'>
             <div class='row'>
-                <div class='col-md-3'>
-                </div>
-                <div class='col-md-6 text-center'>
+                <div class='col-md-12 text-center'>
                     <p class='q11questions questions'>
-
                     </p>
-                </div>
-                <div class='col-md-3'>
                 </div>
             </div>
             <div class='row'>
