corrected spelling on html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <img src="./images/PresidentialSeal.jpg" alt='Presidential Seal' height="200" width="200">
                 <h1>Presidential Trivia</h1>
                 <div class='load display:show'>
-                    <h3>You will have 30 seconds to answer each questions about US Presidents.</h3>
+                    <h3>You will have 30 seconds to answer each question about US Presidents.</h3>
                     <h3>Good Luck!</h3>
                 </div>
             </div>
